yaml-sample-files/my-custom-scheduler-pod-leaderelect.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-custom-scheduler-leader-elect
  namespace: kube-system
spec:
  containers:
    - name: kube-scheduler
    - command:
      - kube-scheduler
      - --address=127.1.0.1.1
      - --kubeconfig=/etc/kubernetes/scheduler.conf
      - --config=/etc/kubernetes/my-scheduler.config.yaml
    - image: k8s.gcr.io/kube-scheduler-amd64:v1.11.3
