yaml-sample-files/my-custom-scheduler.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-custom-scheduler
  namespace: kube-system
spec:
  containers:
  - command:
    - kube-scheduler
    - --address = 127.0.0.1
    - --kubeconfig = /etc/kubernetes/scheduler.conf
    image: <link to image of scheduler>
    name: kube-scheduler
