yaml-sample-files/pod-definition-pull-secrets.yaml
#p31 of my notes
apiVersion: v1
kind: Pod
metadata:
  name: internal-app
spec:
  containers:
  - name: internal-app
    image: private-registry.io/apps/internal-app
  imagePullSecrets:
    - name: regcred
