yaml-sample-files/pod-definition-resource-req-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    name: myapp-pod
spec:
  containers:
    - name: simple-app
      image: simple-app
      ports:
        - containerPort: 8080
      resources:
        requests:
          memory: "4Gi"
          cpu: 2
        limits:
          memory: "8Gi"
          cpu: 4
