yaml-sample-files/service-definition.yml
#for module Service - NodePort
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30008
  selector:
    app: myapp
    type: front-end
