yaml-sample-files/ingress-wear.yaml
#p37 of notes
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: Ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
